# AutonomousVehiclePerception

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  BRANCHING_STRATEGY.md  ENGINEERING_LOG.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/docker/: Dockerfile.django  Dockerfile.fastapi  grafana-datasource.yml  prometheus.yml
deploy/kubernetes/: django-deployment.yml  fastapi-deployment.yml  ingress.yml  namespace.yml  secrets.yml  triton-deployment.yml
deploy/terraform/: main.tf  outputs.tf  variables.tf
docs/: api_contract.json
notebooks/: 01_data_exploration.ipynb  02_cnn_training.ipynb  03_3d_voxel_training.ipynb  04_model_export.ipynb
scripts/: pre-push-coverage-check.sh
src/data/: __init__.py  augmentations.py  kitti_dataset.py  nuscenes_dataset.py
src/django_backend/config/: __init__.py  celery.py  settings.py  urls.py
src/django_backend/fleet/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/django_backend/perception/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/fastapi_service/: __init__.py  gradio_app.py  main.py
src/frontend/: package.json
src/frontend/public/: index.html
src/frontend/src/: App.js  index.js
src/model/: __init__.py  cnn_2d.py  cnn_3d_voxel.py  export.py  fpn_resnet.py
tests/: __init__.py  conftest.py  test_models.py
tests/integration/api/: test_contracts.py
tests/unit/data/: test_datasets.py
tests/unit/django/: test_models.py  test_tasks.py  test_tasks_extended.py  test_urls.py  test_views.py  test_views_extended.py
tests/unit/fastapi/: test_api_client.py  test_endpoints.py  test_gradio.py
tests/unit/model/: test_export.py
(+6 files in other folders)
