# AutonomousVehiclePerception/pyproject.toml
[project]
name = "autonomous-vehicle-perception"
version = "0.1.0"
description = "Real-time object detection and segmentation for self-driving vehicles"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Deep Learning
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "onnx>=1.15.0",
    "onnxruntime-gpu>=1.17.0",
    # Data & Augmentation
    "albumentations>=1.3.1",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "Pillow>=10.2.0",
    # Django Backend
    "Django>=5.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "psycopg2-binary>=2.9.9",
    "celery>=5.3.6",
    "redis>=5.0.0",
    # FastAPI Model Service
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "gradio>=4.15.0",
    "python-multipart>=0.0.6",
    # Monitoring & Experiment Tracking
    "tensorboard>=2.15.0",
    "wandb>=0.16.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "detect-secrets>=1.5.0",
    "black>=24.1.0",
    "flake8>=7.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]
notebooks = [
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.2.0",
]

[tool.black]
line-length = 127
target-version = ["py311"]

[tool.flake8]
max-line-length = 127
select = ["E9", "F63", "F7", "F82"]

[tool.pytest.ini_options]
testpaths = ["tests"]
